--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ flate2 = "1.1.0"
 futures = "0.3.31"
 log = "0.4.27"
 reqwest = { version = "0.12.15", features = ["json"] }
+rusqlite = { version = "0.34.0", features = ["bundled"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tar = "0.4.44"
