--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ dirs = "6.0.0"
 env_logger = "0.11.7"
 flate2 = "1.1.0"
 futures = "0.3.31"
+indicatif = "0.17.11"
 log = "0.4.27"
-reqwest = { version = "0.12.15", features = ["json"] }
+reqwest = { version = "0.12.15", features = ["json", "stream"] }
 rusqlite = { version = "0.34.0", features = ["bundled"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
