--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.97"
+bincode = "1.3"
 chrono = "0.4.40"
 clap = { version = "4.5.34", features = ["derive"] }
 dirs = "6.0.0"
@@ -13,6 +14,7 @@ flate2 = "1.1.0"
 futures = "0.3.31"
 indicatif = "0.17.11"
 log = "0.4.27"
+rayon = "1.10.0"
 reqwest = { version = "0.12.15", features = ["json", "stream"] }
 rusqlite = { version = "0.34.0", features = ["bundled"] }
 serde = { version = "1.0.219", features = ["derive"] }
