--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "CC-BY-NC-4.0"
 keywords = ["latex", "tex", "texlive", "texman"]
 repository = "https://github.com/amirhosseinghanipour/texman"
 documentation = "https://docs.rs/texman/0.1.0"
-categories = ["latex"]
+categories = ["text-editors", "text-processing"]
 readme = "README.md"
 description = "A Rust-based package manager for LaTeX"
 
